fixed signup curse login off-center text

--- a/src/routes/CurseRoute/CurseRoute.css
+++ b/src/routes/CurseRoute/CurseRoute.css
@@ -11,6 +11,7 @@
 
 .curse-bless-title {
     padding: 20px 0;
+    text-align: center;
     font-family: 'IM Fell English', serif;
 }
 
