--- a/src/routes/RegistrationRoute/RegistrationRoute.css
+++ b/src/routes/RegistrationRoute/RegistrationRoute.css
@@ -8,6 +8,7 @@
 
 .sign-up-header {
     margin: 20px 0;
+    text-align: center;
     font-size: 2.5em;
     font-family: 'IM Fell English', serif;
 }
